k8s/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: youtubebacklinks-ip4
    networking.gke.io/managed-certificates: ssl-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: ui
spec:
  rules:
    - http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: ui
                port:
                  number: 3000
          - path: "/links/search"
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 8000
          - path: "/videos/search"
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 8000
          - path: "/channel/new"
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 8000
